Adds resume page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h2>Brook Miller</h2>
   </header>
   <img src="profile image.jpg" alt="Brook Miller Profile Image">
-  <p>Brook Miller is a data analyst in Orlando, Fl. He is currently completing a data analytics program through the University of Central Florida</p>
+  <p>Brook Miller is a data analyst in Orlando, Fl. He is currently completing a data analytics program through the University of Central Florida.</p>
   <p>Brook's primary interest is in natural language processing</p>
   <footer>
   <ul>
+    <li><a href="resume.html>Resume</a></li>
     <li><a href="mailto: millerbrook@gmail.com">email me</a></li>
   <li><a href="http://www.linkedin.com/in/brook-miller-a1201b2a">Connect on Linked In</a></li>
   <li><a href="http://www.github.com/millerbrook">Check out my portfolio</a></li>
